--- a/curriculumvitae.tex
+++ b/curriculumvitae.tex
@@ -32,21 +32,21 @@
 %----------------------------------------------------------------------------------------\\
 
 \name{Giovanni Ciatto}
-\phone{(+39) 346 87 24 256}
+\phone{(+39) 370 10 84 490}
 \skype{giovanni.ciatto}
 \birthday{January 4, 1992} 
 \genre{Male}
 \country{Italy}
 %\address{Via Bagnile, 67, 47522 Cesena (FC), Italy}
 \address{Cesena (FC), Italy}
-\email{\texttt{giovanni.ciatto@studio.unibo.it}}
+\email{\texttt{giovanni.ciatto@unibo.it}}
 \www{\url{https://about.me/gciatto}}
-\photo{sunrise.png}
+\photo{mericci.jpg}
 
 \begin{document}
 
 \begin{rSection}{Desired occupation}
-Placement in a position allowing for research within the fields of \emph{programming languages/pa\-ra\-digms/ar\-chi\-tectures} or \emph{distributed systems coordination}, with a particular focus on \emph{self-organization}.
+A researcher position within the fields of self-organizing \emph{distributed systems}, with a particular focus on the models, architectures, infrastructures, and technologies enabling the coordination of massive distributed computations.
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -88,18 +88,25 @@ Placement in a position allowing for research within the fields of \emph{program
 
 \end{rSection}
 
+\clearpage
+
 %----------------------------------------------------------------------------------------
 %	PUBLICATIONS SECTION
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Publications}
 
-\begin{rSubsection}{Article}{\textbf{(accepted on) January 2017}}{Spiking Neural Networks as Timed Automata}{G. Ciatto, E. De Maria, C. Di Giusto}
-	\item Proceedings of the school ``advances in Systems and Synthetic Biology - Modelling Complex Biological Systems in the Context of Genomics''
+\begin{rSubsection}{Article}{\textbf{Accepted on January 2017}}{Spiking Neural Networks as Timed Automata}{\emph{G. Ciatto, E. De Maria, C. Di Giusto}}
+	\item Proc. of the Thematic Research School on Advances in Systems and Synthetic Biology (ASSB), EDP Sciences, (2017).
 \end{rSubsection}
 
-\begin{rSubsection}{Article}{\textbf{(under submission)}}{Parameter Learning for Spiking Neural Networks modelled as Timed Automata}{G. Ciatto, E. De Maria, C. Di Giusto}
-	\item International conference COORDINATION 2017
+\begin{rSubsection}{Article}{\textbf{Submitted on April 2017}}{Programming the Interaction Space
+		Effectively with ReSpecTX}{\emph{G. Ciatto, S. Mariani, A. Omicini}}
+	\item (submitted to) IDC 2017: $11^{th}$ International Symposium on Intelligent Distributed Computing
+\end{rSubsection}
+
+\begin{rSubsection}{Article}{\textbf{Submitted on May 2017}}{Parameter Learning for Spiking Neural Networks modelled as Timed Automata}{\emph{G. Ciatto, E. De Maria, C. Di Giusto}}
+	\item (submitted to) CMSB 2017: 15th Conference on Computational Methods in Systems Biology
 \end{rSubsection}
 
 \end{rSection}
@@ -131,6 +138,10 @@ Placement in a position allowing for research within the fields of \emph{program
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Experience}
+	
+\begin{rSubsection}{Temporary Research Fellow, ``Assegnista di ricerca''}{\textbf{April 24, 2017 $\rightarrow$ April 23, 2018}}{Department of Informatics -- Science and Engineering (DISI)}{University of Bologna, Italy}
+	\item Project title: ``Language and platform techniques for complex software systems development''
+\end{rSubsection}
 
 \begin{rSubsection}{Internship}{\textbf{June, 2016 $\rightarrow$ December, 2016}}{I3S Laboratory}{University of Nice--Sophia Antipolis, France}
 	\item Studies in the field of theoretical informatics applied to third generation neural networks
@@ -144,6 +155,8 @@ Placement in a position allowing for research within the fields of \emph{program
 \end{rSubsection}
 
 \end{rSection}
+
+\clearpage
 
 %----------------------------------------------------------------------------------------
 %	TECHNICAL STRENGTHS SECTION
@@ -165,6 +178,7 @@ IDEs 					& Eclipse, IntelliJ Idea, Visual Studio, \\
 						& Android Studio, PyCharm
 \end{tabular}						
 \end{rSection}
+
 
 %----------------------------------------------------------------------------------------
 %	ADDITIONAL INFO SECTION
