--- a/curriculumvitae.tex
+++ b/curriculumvitae.tex
@@ -200,7 +200,7 @@ I prefer a \emph{model driven} approach when designing software but I can easily
 \begin{flushright}
 	\textbf{Giovanni Ciatto}, \today
 	
-	\includegraphics[width=6cm]{./signature.png}
+%	\includegraphics[width=6cm]{./signature.png}
 \end{flushright}
 %\begin{rSection}{Signature}
 %\begin{rSubsection}{Signature}{\today}{}{}
