--- a/curriculumvitae.tex
+++ b/curriculumvitae.tex
@@ -54,6 +54,10 @@ A researcher position within the fields of self-organizing \emph{distributed sys
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Education}
+\begin{rSubsection}{PhD Student}{\textbf{November, 2017 $\rightarrow$ Now}}{Data Science and Computation}{University of Bologna, Italy}
+	\item Studies in the field of Data Science and Big Data, focusing on novel enabling approaches, architectures and technologies.
+\end{rSubsection}
+
 % Dissertation: 16/3/2017
 \begin{rSubsection}{Master's degree}{\textbf{October, 2014 $\rightarrow$ March, 2017}}{Computer Science and Engineering}{University of Bologna, Italy}
 \item Studies in the field of programming paradigms, computational models, distributed systems coordination, robotics, machine learning and artificial vision, web applications, business intelligence, model-driven software engineering
@@ -96,17 +100,20 @@ A researcher position within the fields of self-organizing \emph{distributed sys
 
 \begin{rSection}{Publications}
 
-\begin{rSubsection}{Article}{\textbf{Accepted on January 2017}}{Spiking Neural Networks as Timed Automata}{\emph{G. Ciatto, E. De Maria, C. Di Giusto}}
+\begin{rSubsection}{Paper}{}{Spiking Neural Networks as Timed Automata}{\emph{G. Ciatto, E. De Maria, C. Di Giusto}}
 	\item Proc. of the Thematic Research School on Advances in Systems and Synthetic Biology (ASSB), EDP Sciences, (2017).
 \end{rSubsection}
 
-\begin{rSubsection}{Article}{\textbf{Submitted on April 2017}}{Programming the Interaction Space
-		Effectively with ReSpecTX}{\emph{G. Ciatto, S. Mariani, A. Omicini}}
+\begin{rSubsection}{Paper}{\textbf{Accepted on June 2017}}{Programming the Interaction Space Effectively with ReSpecTX}{\emph{G. Ciatto, S. Mariani, A. Omicini}}
 	\item (submitted to) IDC 2017: $11^{th}$ International Symposium on Intelligent Distributed Computing
 \end{rSubsection}
 
-\begin{rSubsection}{Article}{\textbf{Submitted on May 2017}}{Parameter Learning for Spiking Neural Networks modelled as Timed Automata}{\emph{G. Ciatto, E. De Maria, C. Di Giusto}}
-	\item (submitted to) CMSB 2017: 15th Conference on Computational Methods in Systems Biology
+%\begin{rSubsection}{Article}{\textbf{Submitted on May 2017}}{Parameter Learning for Spiking Neural Networks modelled as Timed Automata}{\emph{G. Ciatto, E. De Maria, C. Di Giusto}}
+%	\item (submitted to) CMSB 2017: 15th Conference on Computational Methods in Systems Biology
+%\end{rSubsection}
+
+\begin{rSubsection}{Extended Abstract}{}{Novel Opportunities for Tuple-based Coordination: XPath, the Blockchain, and Stream Processing}{\emph{S. Mariani, A. Omicini, G. Ciatto}}
+	\item WOA 2017: 18th Workshop "From Objects to Agents", pp. 61-64
 \end{rSubsection}
 
 \end{rSection}
@@ -139,7 +146,11 @@ A researcher position within the fields of self-organizing \emph{distributed sys
 
 \begin{rSection}{Experience}
 	
-\begin{rSubsection}{Temporary Research Fellow, ``Assegnista di ricerca''}{\textbf{April 24, 2017 $\rightarrow$ April 23, 2018}}{Department of Informatics -- Science and Engineering (DISI)}{University of Bologna, Italy}
+\begin{rSubsection}{Teaching assistant for the course ``Distributed Systems''}{\textbf{September, 2017 $\rightarrow$ Now}}{School of Engineering and Architecture}{University of Bologna, Italy}
+	\item Distributed architectures. Agent-based technologies and middlewares. Computational logic, logic programming and Prolog.
+\end{rSubsection}
+	
+\begin{rSubsection}{Temporary Research Fellow, ``Assegnista di ricerca''}{\textbf{April 24, 2017 $\rightarrow$ October 31, 2017}}{Department of Informatics -- Science and Engineering (DISI)}{University of Bologna, Italy}
 	\item Project title: ``Language and platform techniques for complex software systems development''
 \end{rSubsection}
 
@@ -171,7 +182,7 @@ Software configuration 	& Windows and Linux installation and configuration\\
 Programming Languages 	& Java, Scala, Xtend, C\# \& VB.Net, Haskell, Prolog,\\
 						& JavaScript, C, Python, Minizinc, COBOL\\
 Protocols \& APIs 		& Socket (TCP \& UDP), HTTP, RESTful WebAPI \\
-Databases 				& SQL, PostgreSQL, MySQL\\
+Databases 				& SQL, PostgreSQL, MySQL, IBM Informix \\
 Development tools 		& Git, Mercurial, Maven, Gradle, Swagger, Xtext\\
 Markup languages 		& XML, HTML, Markdown, \LaTeX \\
 IDEs 					& Eclipse, IntelliJ Idea, Visual Studio, \\
