--- a/curriculumvitae.tex
+++ b/curriculumvitae.tex
@@ -33,20 +33,23 @@
 
 \name{Giovanni Ciatto}
 \phone{(+39) 370 10 84 490}
-\skype{giovanni.ciatto}
+\skype{\href{skype:giovanni.ciatto?call}{\texttt{giovanni.ciatto}}}
 \birthday{January 4, 1992} 
 \genre{Male}
 \country{Italy}
 %\address{Via Bagnile, 67, 47522 Cesena (FC), Italy}
 \address{Cesena (FC), Italy}
-\email{\texttt{giovanni.ciatto@unibo.it}}
+\email{\href{mailto:giovanni.ciatto@unibo.it}{\texttt{giovanni.ciatto@unibo.it}}}
 \www{\url{https://about.me/gciatto}}
+\orcid{\href{https://orcid.org/0000-0002-1841-8996}{\texttt{0000-0002-1841-8996}}}
 \photo{mericci.jpg}
 
 \begin{document}
 
-\begin{rSection}{Desired occupation}
-A researcher position within the fields of self-organizing \emph{distributed systems}, with a particular focus on the models, architectures, infrastructures, and technologies enabling the coordination of massive distributed computations.
+\begin{rSection}{In short}
+PhD student at University of Bologna, attending the ``Data Science and Computation'' PhD course.
+%
+Main research activity comprehends the area of distributed systems, with a particular focus on the models, architectures, and infrastructures, there including Distributed Ledger Technologies (e.g., Blockchains), technologies for Big Data management and complex event processing.
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -55,9 +58,9 @@ A researcher position within the fields of self-organizing \emph{distributed sys
 
 \begin{rSection}{Education}
 \begin{rSubsection}{PhD Student}{\textbf{November, 2017 $\rightarrow$ Now}}{Data Science and Computation}{University of Bologna, Italy}
-	\item Studies in the field of Data Science and Big Data, focusing on novel enabling approaches, architectures and technologies.
+	\item Studies in the field of Data Science and Big Data, focusing on novel enabling approaches, architectures and technologies
 \end{rSubsection}
-
+%
 % Dissertation: 16/3/2017
 \begin{rSubsection}{Master's degree}{\textbf{October, 2014 $\rightarrow$ March, 2017}}{Computer Science and Engineering}{University of Bologna, Italy}
 \item Studies in the field of programming paradigms, computational models, distributed systems coordination, robotics, machine learning and artificial vision, web applications, business intelligence, model-driven software engineering
@@ -87,58 +90,10 @@ A researcher position within the fields of self-organizing \emph{distributed sys
 \end{rSubsection}
 
 \begin{rSubsection}{High-school diploma}{\textbf{2006 $\rightarrow$ 2011}}{Scientific curriculum}{Liceo Scientifico ``C. Caminiti'', S. Teresa di Riva (ME), Italy}
-	\item 98/100
+	\item Final mark 98/100
 \end{rSubsection}
 
 \end{rSection}
-
-\clearpage
-
-%----------------------------------------------------------------------------------------
-%	PUBLICATIONS SECTION
-%----------------------------------------------------------------------------------------
-
-\begin{rSection}{Publications}
-
-\begin{rSubsection}{Paper}{}{Spiking Neural Networks as Timed Automata}{\emph{G. Ciatto, E. De Maria, C. Di Giusto}}
-	\item Proc. of the Thematic Research School on Advances in Systems and Synthetic Biology (ASSB), EDP Sciences, (2017).
-\end{rSubsection}
-
-\begin{rSubsection}{Paper}{\textbf{Accepted on June 2017}}{Programming the Interaction Space Effectively with ReSpecTX}{\emph{G. Ciatto, S. Mariani, A. Omicini}}
-	\item (submitted to) IDC 2017: $11^{th}$ International Symposium on Intelligent Distributed Computing
-\end{rSubsection}
-
-%\begin{rSubsection}{Article}{\textbf{Submitted on May 2017}}{Parameter Learning for Spiking Neural Networks modelled as Timed Automata}{\emph{G. Ciatto, E. De Maria, C. Di Giusto}}
-%	\item (submitted to) CMSB 2017: 15th Conference on Computational Methods in Systems Biology
-%\end{rSubsection}
-
-\begin{rSubsection}{Extended Abstract}{}{Novel Opportunities for Tuple-based Coordination: XPath, the Blockchain, and Stream Processing}{\emph{S. Mariani, A. Omicini, G. Ciatto}}
-	\item WOA 2017: 18th Workshop "From Objects to Agents", pp. 61-64
-\end{rSubsection}
-
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
-%	LANGUAGE SECTION
-%----------------------------------------------------------------------------------------
-
-\begin{rSection}{Language}
-\begin{center}
-\begin{tabular}{|c|c|c|c|c|c|}
-	\hline
-	&\textbf{Listening}&\textbf{Reading}&\textbf{Interaction}&\textbf{Speaking}&\textbf{Writing}\\\hline
-	\textbf{Italian}&\multicolumn{5}{c}{Native language}\vline\\\hline
-	\textbf{English}&C1&C1&C1&C1&C1\\\hline
-	\textbf{French}&A1&A1&A1&A1&A1 \\
-	\hline
-\end{tabular}
-%\item \textit{Skills acquired during Internship in Sophia-Antipolis (France)}
-\end{center}
-%\begin{rSubsection}{Certifications}{}{}{}
-%	\item \textbf{IELTS}, British Council, European level: C1 \hfill \textbf{July, 2015}
-%\end{rSubsection}
-\end{rSection}
-
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
@@ -146,28 +101,87 @@ A researcher position within the fields of self-organizing \emph{distributed sys
 
 \begin{rSection}{Experience}
 	
-\begin{rSubsection}{Teaching assistant for the course ``Distributed Systems''}{\textbf{September, 2017 $\rightarrow$ Now}}{School of Engineering and Architecture}{University of Bologna, Italy}
-	\item Distributed architectures. Agent-based technologies and middlewares. Computational logic, logic programming and Prolog.
+\begin{rSubsection}{Teaching assistant for the course ``Object oriented programming''}{\textbf{Sept. $\rightarrow$ Dec., 2017}}{School of Engineering and Architecture}{University of Bologna, Italy}
+	\item Foundations of the object oriented programming paradigm, design patterns, concurrency basics, and GUI development in Java
+	\item Supervisor: Prof. \href{mailto:mirko.viroli@unibo.it}{Mirko Viroli}
 \end{rSubsection}
 	
-\begin{rSubsection}{Temporary Research Fellow, ``Assegnista di ricerca''}{\textbf{April 24, 2017 $\rightarrow$ October 31, 2017}}{Department of Informatics -- Science and Engineering (DISI)}{University of Bologna, Italy}
+\begin{rSubsection}{Teaching assistant for the course ``Distributed Systems''}{\textbf{Sept. $\rightarrow$ Dec., 2017}}{School of Engineering and Architecture}{University of Bologna, Italy}
+	\item Distributed architectures. Agent-based technologies and middlewares. Computational logic, logic programming and Prolog.
+	\item Supervisor: Prof. \href{mailto:andrea.omicini@unibo.it}{Andrea Omicini}
+\end{rSubsection}
+	
+\begin{rSubsection}{Research Fellow, ``Assegnista di ricerca''}{\textbf{April, 2017 $\rightarrow$ October, 2017}}{Department of Informatics -- Science and Engineering (DISI)}{University of Bologna, Italy}
 	\item Project title: ``Language and platform techniques for complex software systems development''
+	\item Goal: producing a translation framework \& runtime aimed at automatically converting COBOL sources into .NET sources 
+	\item Supervisor: Prof. \href{mailto:mirko.viroli@unibo.it}{Mirko Viroli} \hfill Reference: Mr. \href{mailto:andrea.patrignani@unibo.it}{Andrea Patrignani}
 \end{rSubsection}
 
 \begin{rSubsection}{Internship}{\textbf{June, 2016 $\rightarrow$ December, 2016}}{I3S Laboratory}{University of Nice--Sophia Antipolis, France}
 	\item Studies in the field of theoretical informatics applied to third generation neural networks
+	\item Supervisors: Prof. \href{mailto:gianluigi.zavattaro@unibo.it}{Gianluigi Zavattaro}, Prof. \href{mailto:cdigiusto@i3s.unice.fr}{Cinzia Di Giusto}, Prof. \href{mailto:elisabetta.de-maria@unice.fr}{Elisabetta De Maria} 
 \end{rSubsection}
 
 \begin{rSubsection}{Internship}{\textbf{October, 2013 $\rightarrow$ February, 2014}}{A GUI for the Alchemist Simulator}{APICe lab, University of Bologna, Cesena, Italy}
-\item Design and implementation of a GUI for the Alchemist simulator and its integration with OpenStreetMap
-\item Supervisor: Prof. Mirko Viroli
-\item Alchemist: \url{http://alchemistsimulator.github.io}
-\item OpenStreetMap: \url{https://www.openstreetmap.org}
+\item Design and implementation of a GUI for the \href{http://alchemistsimulator.github.io}{Alchemist} simulator and its integration with \href{https://www.openstreetmap.org}{OpenStreetMap}
+\item Supervisor: Prof. \href{mailto:mirko.viroli@unibo.it}{Mirko Viroli}
 \end{rSubsection}
 
 \end{rSection}
 
-\clearpage
+%----------------------------------------------------------------------------------------
+%	PUBLICATIONS SECTION
+%----------------------------------------------------------------------------------------
+
+%\begin{rSection}{Publications}
+%	
+%	\begin{rSubsection}{Paper}{}{Spiking Neural Networks as Timed Automata}{\emph{G. Ciatto, E. De Maria, C. Di Giusto}}
+%		\item Proc. of the Thematic Research School on Advances in Systems and Synthetic Biology (ASSB), EDP Sciences, (2017).
+%	\end{rSubsection}
+%	
+%	\begin{rSubsection}{Paper}{}{Programming the Interaction Space Effectively with ReSpecTX}{\emph{G. Ciatto, S. Mariani, A. Omicini}}
+%		\item IDC 2017: $11^{th}$ International Symposium on Intelligent and Distributed Computing
+%	\end{rSubsection}
+%	
+%	\begin{rSubsection}{Article}{\textbf{Submitted on May 2017}}{Parameter Learning for Spiking Neural Networks modelled as Timed Automata}{\emph{G. Ciatto, E. De Maria, C. Di Giusto}}
+%		\item (submitted to) CMSB 2017: 15th Conference on Computational Methods in Systems Biology
+%	\end{rSubsection}
+%	
+%	\begin{rSubsection}{Extended Abstract}{}{Novel Opportunities for Tuple-based Coordination: XPath, the Blockchain, and Stream Processing}{\emph{S. Mariani, A. Omicini, G. Ciatto}}
+%		\item WOA 2017: 18th Workshop "From Objects to Agents", pp. 61-64
+%	\end{rSubsection}
+%
+%	
+%\end{rSection}
+\MakeUppercase{\bf List of Publications} % Section title
+\sectionlineskip
+\hrule % Horizontal line
+\vspace{-1cm}
+\nocite{*}
+\bibliographystyle{plain}
+\renewcommand\refname{}
+\bibliography{./papers}
+
+%----------------------------------------------------------------------------------------
+%	LANGUAGE SECTION
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{Language self-assessment}
+	\begin{center}
+		\begin{tabular}{|c|c|c|c|c|c|}
+			\hline
+			&\textbf{Listening}&\textbf{Reading}&\textbf{Interaction}&\textbf{Speaking}&\textbf{Writing}\\\hline
+			\textbf{Italian}&\multicolumn{5}{c}{Native language}\vline\\\hline
+			\textbf{English}&C1&C1&C1&C1&C1\\\hline
+			\textbf{French}&B1&B1&A1&A1&B1 \\
+			\hline
+		\end{tabular}
+		%\item \textit{Skills acquired during Internship in Sophia-Antipolis (France)}
+	\end{center}
+	%\begin{rSubsection}{Certifications}{}{}{}
+	%	\item \textbf{IELTS}, British Council, European level: C1 \hfill \textbf{July, 2015}
+	%\end{rSubsection}
+\end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	TECHNICAL STRENGTHS SECTION
@@ -181,7 +195,8 @@ Programming Paradigms	& imperative, object oriented, functional,\\
 Software configuration 	& Windows and Linux installation and configuration\\
 Programming Languages 	& Java, Scala, Xtend, C\# \& VB.Net, Haskell, Prolog,\\
 						& JavaScript, C, Python, Minizinc, COBOL\\
-Protocols \& APIs 		& Socket (TCP \& UDP), HTTP, RESTful WebAPI \\
+Data Analysis Tools		& Matlab/Octave, R, Python + Pandas/NumPy\\
+Networking 				& Socket (TCP \& UDP), HTTP, RESTful WebAPI \\
 Databases 				& SQL, PostgreSQL, MySQL, IBM Informix \\
 Development tools 		& Git, Mercurial, Maven, Gradle, Swagger, Xtext\\
 Markup languages 		& XML, HTML, Markdown, \LaTeX \\
@@ -197,7 +212,7 @@ IDEs 					& Eclipse, IntelliJ Idea, Visual Studio, \\
 
 \begin{rSection}{Additional information}
 
-\item \textbf{About me}: I am an experienced developer and designer. 
+\item \textbf{About me}: I am an Software experienced developer and designer. 
 I can both work alone or as a team, with or without my favorite IDEs. 
 %I often exploit version control system such as Git or Mercurial to make my projects safe. 
 I prefer a \emph{model driven} approach when designing software but I can easily switch my mind to some agile approach, like SCRUM, if needed.
